Get project structure in place with basic user classes

--- a/finebe-api/finebe-api.csproj
+++ b/finebe-api/finebe-api.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Src/Repositories/UserRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Src/Repositories/UserRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.2" />
