--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "dotnet.defaultSolution": "finebe-api.sln"
+    "dotnet.defaultSolution": "finebe-api.sln",
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "name": "FinebeDev",
+            "database": "${workspaceFolder:finebe}/finebe-api/finebeDev.db"
+        }
+    ]
 }
