--- a/finebe.webapi/appsettings.json
+++ b/finebe.webapi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ApplicationConnectionString": "Data Source=finebe.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
