--- a/finebe.entities/finebe.entities.csproj
+++ b/finebe.entities/finebe.entities.csproj
@@ -6,4 +6,12 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Identity/" />
+  </ItemGroup>
+
 </Project>
