--- a/finebe.entities/finebe.entities.csproj
+++ b/finebe.entities/finebe.entities.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="Identity/" />
+    <Folder Include="ResetPassword/ValidateResetTokenModel/" />
   </ItemGroup>
 
 </Project>
