--- a/finebe.infrastructure/finebe.infrastructure.csproj
+++ b/finebe.infrastructure/finebe.infrastructure.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\finebe.core.services\finebe.core.services.csproj" />
+    <ProjectReference Include="..\finebe.entities\finebe.entities.csproj" />
   </ItemGroup>
 
 </Project>
