Restructure for simplicity

--- a/finebe.webapi/finebe.webapi.csproj
+++ b/finebe.webapi/finebe.webapi.csproj
@@ -19,15 +19,11 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.5" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\finebe.infrastructure.persistence\finebe.infrastructure.persistence.csproj" />
-    <ProjectReference Include="..\finebe.infrastructure\finebe.infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
