Refresh tokens + auth changes

--- a/finebe.webapi/finebe.webapi.csproj
+++ b/finebe.webapi/finebe.webapi.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Folder Include="Src/Models/Domain/" />
+    <Folder Include="Src/Models/Generic/RefreshTokenRequestModel/" />
     <Folder Include="wwwroot/" />
   </ItemGroup>
 
