DiagnosticContext + Refactorings + Logo

--- a/finebe.webapi/appsettings.json
+++ b/finebe.webapi/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "ApplicationConnectionString": "Data Source=finebe.db"
   },
+  "Settings": {
+    "CorrelationIdKey": "x-correlation-id"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
